fix alignment of close icon in dialogs

--- a/frontend/src/app/shared/custom/dialog-header/dialog-header.component.scss
+++ b/frontend/src/app/shared/custom/dialog-header/dialog-header.component.scss
@@ -7,3 +7,9 @@
     margin-bottom: 1rem;
   }
 }
+
+mat-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
